@@ -5,6 +5,11 @@ Changelog
 1.7.5 (unreleased)
 ------------------
 
+- Add editable filename functionality.
+  The File-Schema is extended with a new StringField: originFilename.
+  You can set a new filename without touching its extension.
+  [elioschmutz]
+
 - Remove percent signs from download URL to fix problems in combination with
   Apache mod_rewrite.
   [buchi]
